Add notes to example

--- a/example.conf
+++ b/example.conf
@@ -28,6 +28,7 @@ rsync_args="-avXA --progress --stats"
 # The path to the rsync binary on this machine
 rsync_bin="/usr/bin/rsync"
 # The full path to an optional filter file
+# Optional - leave blank to omit.
 rsync_filter="/etc/sysbackup/filter.txt"
 
 # 0 = pull from the remote host
@@ -79,6 +80,6 @@ calculate_free_space=1
 #backup_file_list=$(mktemp /tmp/backup.$(date $date_fmt).XXX || exit 1)
 #free_padding=200
 
+# Set this to any value other than 0 to confirm the app is configured.
 i_have_configured=0
-
 
